examples/type_system/failing/161_tuple_destructure_concrete_mismatch_prefers_e300.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/161_tuple_destructure_concrete_mismatch_prefers_e300.flx
// error[E300]: Type Mismatch
//
// I found a type mismatch.
//
//   examples/type_system/failing/161_tuple_destructure_concrete_mismatch_prefers_e300.flx:29:18
//    |
// 29 |     let (a, b) = 1
//    |                  ^
//    |                  - this expression has type `Int`
//
//    |                  - destructure source type is known at compile time
//
// Note:
//   expected type: (_, _)
//   found type: Int
//
// Help:
//   These two types are not compatible.
//   destructure source does not match pattern shape
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E300

fn main() -> Unit {
    let (a, b) = 1
}
